Fix CSS alignment

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #D9D9D9;
   padding: 20px;
   height: 100vh;
+}
+
+main{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -38,6 +42,8 @@ section.game-status {
   font-weight: 500;
   align-items: center;
   min-height: 60px;
+  width:100%;
+  max-width:350px
 }
 
 section.game-status.won {
@@ -61,7 +67,7 @@ section.game-status>p {
 section.lang-container {
   display: flex;
   flex-wrap: wrap;
-  width: 350px;
+  max-width: 350px;
   justify-content: center;
   margin-block: 30px;
   gap: 5px;
@@ -122,7 +128,8 @@ section.keyboard {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 5px
+  gap: 5px;
+  max-width: 350px;
 }
 
 .keyboard-chip {
